modified content of about page, fixed spacing on project pages, turned display of projects back into bubbles

--- a/src/ProjectPages.css
+++ b/src/ProjectPages.css
@@ -17,7 +17,7 @@
 
 .projectPageContainer {
   display: flex;
-  flex: 1;
+  /* flex: 1; */
   flex-direction: column;
   justify-content: center;
   align-items: center;
@@ -30,11 +30,13 @@
   justify-content: center;
   /* margin: 50px 200px 0; */
   /* margin: 30px 200px; */
-  /* margin-bottom: 60px; */
+  margin-bottom: 60px;
   padding: 30px 40px;
-  max-width: 80vw;
+  width: 80vw;
   /* border: 1px solid #000; */
   background-color: rgb(255, 255, 255);
+  background-color: rgba(255, 255, 255, 0.918);
+
   box-shadow: 2px 2px 50px rgba(0, 0, 0, 0.2);
   border-radius: 20px;
 }
