--- a/src/bubbles.css
+++ b/src/bubbles.css
@@ -35,11 +35,17 @@ body {
   /* height: 400vh; */
   /* width: 80vw; */
   /* margin: 0 20%; */
-  flex-direction: column;
-  /* flex-wrap: wrap; */
+  flex-direction: row;
+  flex-wrap: wrap;
   justify-content: center;
   align-items: center;
+  align-content: center;
   margin: 0 50px;
+  /* overflow: hidden; */
+  /* padding-top: 100px; */
+  /* display: grid;
+  grid-template-columns: repeat(3, 1fr); */
+  /* max-width: 100vw; */
   /* background-color: rgba(255, 255, 255, 0.11);
   box-shadow: inset 0 0 5px rgba(255, 255, 255, 0.3);
   background: rgba(145, 186, 233, 0);
@@ -52,7 +58,7 @@ body {
 .projectDiv {
   display: flex;
   flex-direction: row;
-  flex-shrink: 1;
+  /* flex-shrink: 1; */
   justify-content: center;
   align-items: center;
   /* background-color: rgba(255, 255, 255, 0.11);
@@ -63,21 +69,35 @@ body {
   border-radius: 80px; */
   /* border: 2px solid brown; */
   /* backdrop-filter: blur(5px); */
-  width: 80%;
-  margin: 50px 0;
+  /* width: 80%; */
+  margin: 0px 10px;
 }
 
-.projectDiv.bubbleBtn {
-  width: 80vw;
-  border-radius: 100px;
-  height: 80vh;
+.projectDiv.bubbles {
+  width: 300px;
+  /* border-radius: 50%; */
+  height: 300px;
+  backdrop-filter: blur(2px);
+  cursor: pointer;
+  transition: 500ms;
+  /* animation: float 3s ease-in-out infinite; */
+}
+
+.projectDiv.bubbles:nth-child(odd) {
+  animation-delay: 0.5s;
+}
+
+.projectDiv.bubbles:hover {
+  /* box-shadow: 0 0 25px rgba(255, 250, 239, 0.5); */
+  box-shadow: inset 0 0 25px rgba(255, 255, 255, 0.5),
+    0 0 40px rgba(255, 250, 239, 0.3);
 }
 
 .imgContainer {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 60%;
+  /* width: 60%; */
   height: 100%; /* Set the container height */
   padding: 20px 0;
   /* border: 2px solid red; */
@@ -86,7 +106,7 @@ body {
 
 .projectImage {
   max-height: 100%;
-  max-width: 80%;
+  max-width: 90%;
   object-fit: contain; /* Preserve aspect ratio and fit within the container */
 }
 
@@ -228,19 +248,19 @@ body {
   margin-top: 10%;
 } */
 
-/* .bubbleContainer:nth-child(1),
-.bubbles,
-.bubbles:nth-child(1) {
+/* .bubbleContainer:nth-child(1), */
+/* .bubbles, */
+/* .bubbles:nth-child(1) {
   animation-delay: 1.5s;
-}
+} */
 
-.bubbleContainer:nth-child(3),
-.bubbles,
-.bubbles:nth-child(3) {
-  animation-delay: 2.5s;
-}
-.bubbles:nth-child(4) {
-  animation-delay: 5.5s;
+/* .bubbleContainer:nth-child(3), */
+/* .bubbles, */
+/* .bubbles:nth-child(3) {
+  animation-delay: 1.5s;
+} */
+/* .bubbles:nth-child(5) {
+  animation-delay: 1.5s;
 } */
 
 .bubbleLighting {
